--- a/siase-app/package.json
+++ b/siase-app/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vuetable-2": "^2.0.0-beta.4",
     "vuetify": "^2.2.11",
     "vuex": "^3.4.0"
   },
